objects/Wineyard_holidays__mdt.object
<CustomObject>
    <description>Lists the holidays of chimney rock</description>
    <fields>
        <fullName>DayAfterThanksGiving__c</fullName>
        <label>DayAfterThanksGiving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Easter__c</fullName>
        <label>Easter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Day__c</fullName>
        <label>Labor Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memorial_Day__c</fullName>
        <label>Memorial Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presidents_Day__c</fullName>
        <label>Presidents Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ThanksGiving__c</fullName>
        <label>ThanksGiving</label>
        <type>Date</type>
    </fields>
    <label>Wineyard holidays</label>
    <pluralLabel>Wineyard holidays</pluralLabel>
</CustomObject>